# otadump-crazystylus

./: .gitignore  bun.lockb  index.html  package.json
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: gui.rs  lib.rs  main.rs  tui.rs
src-tauri/src/core/: extract.rs  mod.rs  options.rs  reporter.rs
