[package]
name = "otadump"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.0"
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
anyhow = "1.0.69"
bzip2 = { version = "0.4.4", features = ["static"] }
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
color-print = "0.3.4"
console = { version = "0.15.5", features = ["windows-console-colors"] }
hex = "0.4.3"
indicatif = "0.17.3"
memmap2 = "0.7.0"
nom = "7.1.3"
nom-derive = "0.10.1"
prost = "0.11.8"
rayon = "1.7.0"
rust-lzma = { version = "0.6.0", features = ["static"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.6"
sync-unsafe-cell = "0.1.0"
tauri = { version = "1.6.1", features = ["dialog-open", "shell-open"] }
tempfile = "3.6.0"
zip = { version = "0.6.6", features = [
    "deflate",
    "bzip2",
    "zstd",
], default-features = false }

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
